--- a/client/src/views/Login/login.css
+++ b/client/src/views/Login/login.css
@@ -12,7 +12,7 @@ body {
 }
 
 .App-header {
-    background-color: #ffffff;
+    background-color: #282c34;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
