--- a/client/src/views/Careers/careers.css
+++ b/client/src/views/Careers/careers.css
@@ -1,14 +1,7 @@
-body {
-    margin: 0;
-}
-
-.App-header {
-    background-color: #ffffff;
+.Careers{
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: black;
 }
