--- a/client/src/views/Careers/careers.css
+++ b/client/src/views/Careers/careers.css
@@ -5,3 +5,58 @@
     align-items: center;
     justify-content: center;
 }
+.careerheader
+{
+margin-top: 10px;
+margin-bottom: 20px;
+}
+.careerrow{
+    padding-top: 20px;
+    
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(224, 247, 253);
+    border-top: solid 5px rgb(0, 208, 255);
+    padding-bottom: 15px;
+}
+
+.leftcol
+{
+    box-sizing: border-box;
+width: 50%;
+padding-left: 8%;
+}
+.rightcol
+{
+display: flex;
+flex-direction: column;
+    width: 50%;
+    margin-right: 25px;
+}
+.rightcol span
+{
+    margin-top: -20px;
+}
+.careerimg
+{
+    width: 600px;
+    height: 400px;
+    margin-left: -55px;
+}
+table {
+    border-collapse: collapse;
+    width: 40%;
+  }
+  
+  th, td {
+    padding-left: 25px;
+    padding-top:8px;
+    padding-bottom: 8px;
+    text-align: left;
+    border-bottom: 1px solid black;
+}
+
+li{
+    padding-bottom: 8px;
+}
