--- a/client/src/components/Header/NavBar.css
+++ b/client/src/components/Header/NavBar.css
@@ -17,7 +17,8 @@
 .nav-items {
     
     display:flex;
-    margin-left: 15%;
+    margin-right: 5%;
+    margin-left: 5%;
     align-items: center;
 }
 
@@ -44,5 +45,16 @@ label{
     padding-right: 25px;
     height: 51px;
 }
-
+input{
+   
+    padding-top: 14px;
+    padding-right: 85px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    height: 45px;
+    width: 450px;
+    border-radius: 5px;
+    margin-right: 15px;
+    border: none;
+}
 
