--- a/client/src/components/Banner/banner.css
+++ b/client/src/components/Banner/banner.css
@@ -15,3 +15,8 @@
             font-size:33px;
             fill:#FFFFFF;
          }
+         .cap{
+            font-family: atma; 
+            font-size:12px;
+            fill:#FFFFFF;
+         }
