--- a/client/src/components/Header/NavBar.css
+++ b/client/src/components/Header/NavBar.css
@@ -15,16 +15,13 @@
 
 
 .nav-items {
-    
+    background: #3A82EF;
     display:flex;
     margin-right: 5%;
-    margin-left: 5%;
     align-items: center;
 }
 
 .nav-link {
-
-    background: #2F77E3;
     color:white;
     padding: 14px 25px;
     text-align: center;
@@ -32,8 +29,9 @@
 }
 
 .nav-link:hover {
-    background-color:white;
-    color:black;
+    color: white;
+    font-size: larger;
+    font-weight: bolder;
 }
 
 label{
