--- a/client/src/views/EditAvatar/avtr.css
+++ b/client/src/views/EditAvatar/avtr.css
@@ -42,7 +42,8 @@
 {
     display: flex;
     flex-direction: row;
-height: 60%;
+    height: 60%;
+    margin-left: -30%;
 }
 .avtrsave
 {
@@ -89,4 +90,19 @@ height: 60%;
     border-radius: 5px;
     margin-left: -11.25%;
     margin-top: -50%;
+}
+
+.avatarimgold
+{
+    border-radius: 5px;
+    margin-left: 40px;
+    margin-top: -38%;
+}
+
+.avtrheading2
+{
+    font-size: 58px;
+    color:#3A82EF;
+    font-family:atma;
+    
 }
